@@ -201,6 +201,57 @@
                        "--"
                        ["Undo Close Tab" undo-kill-buffer
                         :active (fboundp 'undo-kill-buffer)]))))
+     (defsubst tabbar-line-tab (tab)
+       "Return the display representation of tab TAB.
+That is, a propertized string used as an `header-line-format' template
+element.
+Call `tabbar-tab-label-function' to obtain a label for TAB."
+       (let* ( (selected-p (tabbar-selected-p tab (tabbar-current-tabset)))
+               (modified-p (buffer-modified-p (tabbar-tab-value tab)))
+               (close-button-image (tabbar-find-image 
+                                    `((:type xpm :data ,(tabbar-ruler-image :type 'close :disabled (not modified-p))))))
+               (face (if selected-p
+                         (if modified-p
+                             'tabbar-selected-modified
+                           'tabbar-selected
+                           )
+                       (if modified-p
+                           'tabbar-unselected-modified
+                         'tabbar-unselected
+                         ))))
+         (concat
+          (propertize "[x]"
+                      'display (tabbar-normalize-image close-button-image 0)
+                      'face face
+                      'pointer 'hand
+                      'tabbar-tab tab
+                      'local-map (tabbar-make-tab-keymap tab)
+                      'tabbar-action 'close-tab
+                      )
+          (propertize " " 'face face
+                      'tabbar-tab tab
+                      'local-map (tabbar-make-tab-keymap tab)
+                      'help-echo 'tabbar-help-on-tab
+                      'face face
+                      'pointer 'hand
+                      )
+          (propertize 
+           (if tabbar-tab-label-function
+               (funcall tabbar-tab-label-function tab)
+             tab)
+           'tabbar-tab tab
+           'local-map (tabbar-make-tab-keymap tab)
+           'help-echo 'tabbar-help-on-tab
+           'mouse-face 'tabbar-highlight
+           'face face
+           'pointer 'hand)
+          (propertize (if modified-p (with-temp-buffer (insert "*") (insert " ") (buffer-substring (point-min) (point-max))) " ") 'face face
+                      'tabbar-tab tab
+                      'local-map (tabbar-make-tab-keymap tab)
+                      'help-echo 'tabbar-help-on-tab
+                      'face face
+                      'pointer 'hand)
+          tabbar-separator-value)))
      (defadvice tabbar-line-tab (around window-or-terminal activate)
        "Fix tabbar-ruler in window-system and terminal"
        (if window-system
